--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mist-io-switch",
-   "version": "0.0.1",
+  "version": "0.0.1",
   "author": "Jesper Lökfors <jesper.lokfors@controlthings.fi>",
   "description": "",
   "main": "src/aplication.js",
   "dependencies": {
     "debug": "2.1.3",
-    "mist-device": "0.6.4"
+    "mist-api": "0.0.18"
   },
   "repository": {
     "type": "git",
