--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.1",
   "author": "Jesper Lökfors <jesper.lokfors@controlthings.fi>",
   "description": "",
-  "main": "src/aplication.js",
+  "main": "src/parking.js",
   "dependencies": {
-    "debug": "2.1.3",
-    "mist-api": "0.0.18"
+    "mist-api": "0.4.0-beta"
   },
   "repository": {
     "type": "git",
