--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "mist-io-switch",
+  "name": "mist-examples",
   "version": "0.0.1",
   "author": "Jesper Lökfors <jesper.lokfors@controlthings.fi>",
-  "description": "",
-  "main": "src/parking.js",
+  "description": "ControlThings Mist exmaple code for node.js",
+  "license": "Apache-2.0",
   "dependencies": {
     "mist-api": "0.4.0-beta"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://wish.cto.fi:/git/mist-node/io-switch#master"
-  },
-  "scripts": {
-    "test": "istanbul cover --hook-run-in-context _mocha -- -R spec"
+    "url": "https://github.com/akaustel/mist-examples-nodejs.git"
   }
 }
